tests/fixtures/invalid/pow_int_list_dict.py
# Cannot call pow() with Int, List[int], Dict[str, int]
x = pow(1, [1, 2, 3], {"a": 1})
